[project]
name = "gsheet_tools"
version = "0.1.0"
description = "Assistive development tool for implementing google sheet related operations and scenarios in python projects"
authors = [
    {name = "Ankit Yadav", email = "ankit8290@gmail.com"},
]
dependencies = ["pandas>=2.3.3"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"



[tool.pdm]
distribution = true

[tool.pdm.scripts]
isort = "isort src/gsheet_tools"
black = "black src/gsheet_tools"
format = {composite = ["isort", "black"]} # will apply changes on code
check_isort = "isort --check src/gsheet_tools"
check_black = "black --check src/gsheet_tools"
ruff = "ruff check --show-files src/gsheet_tools"
ruff_fix = "ruff check --fix src/gsheet_tools"
lint = {composite = ["ruff", "check_isort", "check_black"]}
pylint = "pylint -f actions src/"
mypy = "mypy src/"
check_build = "check-wheel-contents dist/"

# Linting error codes to ignore
ignore = [
    "F403",    # unable to detect undefined names from star imports
    "F405",    # undefined locals from star imports
    "W605",    # invalid escape sequence
    "A003",    # shadowing python builtins
    "RET505",  # unnecessary 'else' after 'return' statement
    "RET504",  # Unnecessary variable assignment before return statement
    "RET507",  # Unnecessary {branch} after continue statement
    "PT011",   # pytest-raises-too-broad
    "PT012",   # pytest.raises() block should contain a single simple statement
    "PLW0603", # Using the global statement to update is discouraged
    "PLW2901", # for loop variable overwritten by assignment target
    "G004",    # Logging statement uses f-string
    "PIE790",  # no-unnecessary-pass
    "PIE810",  # multiple-starts-ends-with
    "PGH003",  # Use specific rule codes when ignoring type issues
    "PLC1901", # compare-to-empty-string
]

# Linting error codes to ignore on a per-file basis
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E501", "F403"]

# MyPy
[tool.mypy]
python_version = "3.12"
follow_imports = "skip"
ignore_missing_imports = true
files = "src"  # directory mypy should analyze
exclude = [     # Directories to exclude from mypy's analysis
    "acme/somedir",
    "acme/somefile\\.py",
    "dirname",
    "src/gsheet_tools/__init__\\.py"
]

[[tool.mypy.overrides]]
module = "gsheet_tools.*"
ignore_missing_imports = false
disallow_untyped_defs = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "check-wheel-contents>=0.6.3",
]
format = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pylint>=3.3.9",
    "pylint-actions>=0.6.0",
    "isort>=6.1.0",
    "ruff>=0.14.0",
]

